--- a/WebApplication2/CompanyName.Application.WebApi.OrdersApi.csproj
+++ b/WebApplication2/CompanyName.Application.WebApi.OrdersApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -18,6 +19,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CinemaService\CompanyName.Application.Services.ProductService.csproj" />
+    <ProjectReference Include="..\CompanyName.Application.Dal.ProducttDal\CompanyName.Application.Dal.Orders.csproj" />
   </ItemGroup>
 
 </Project>
