--- a/WebApi/CompanyName.Application.WebApi.OrdersApi.csproj
+++ b/WebApi/CompanyName.Application.WebApi.OrdersApi.csproj
@@ -22,8 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CinemaService\CompanyName.Application.Services.ProductService.csproj" />
-    <ProjectReference Include="..\CompanyName.Application.Dal.ProducttDal\CompanyName.Application.Dal.Orders.csproj" />
+    <ProjectReference Include="..\Database\CompanyName.Application.Dal.Orders.csproj" />
+    <ProjectReference Include="..\Services\CompanyName.Application.Services.ProductService.csproj" />
   </ItemGroup>
 
 </Project>
