--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -1,8 +1,7 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "OrderRepositorySettings": {
+    "ConnectionString": "Data Source=VBALZIROV\\SQLEXPRESS;Initial Catalog=Beluga;Integrated Security=SSPI",
+    "IsInMemory": "true",
+    "array": [ 11, 22, 33 ]
   }
 }
