--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,14 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*",
-  "TicketTTLMinutes": "300",
-  "users": {
-    "Name": "dsdsd",
-    "sdsd": ""
+  "OrderRepositorySettings": {
+    "ConnectionString": "newConnectionString",
+    "IsInMemory": "false",
+    "DatabaseName": "MarketDb",
+    "array": [ 1, 2, 3, 4 ]
   }
 }
