Added Jwt token Auth

--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -1,7 +1,6 @@
 {
   "OrderRepositorySettings": {
-    "ConnectionString": "Data Source=VBALZIROV\\SQLEXPRESS;Initial Catalog=Beluga;Integrated Security=SSPI",
-    "IsInMemory": "true",
-    "array": [ 11, 22, 33 ]
+    "ConnectionString": "Data Source=VBALZIROV\\SQLEXPRESS;Initial Catalog=Trinity;Integrated Security=SSPI",
+    "IsInMemory": "true"
   }
 }
