--- a/CompanyName.Application.Services.AuthService/CompanyName.Application.Services.AuthService.csproj
+++ b/CompanyName.Application.Services.AuthService/CompanyName.Application.Services.AuthService.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,10 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Database\CompanyName.Application.Dal.Orders.csproj" />
+    <ProjectReference Include="..\CompanyName.Application.Dal.Auth\CompanyName.Application.Dal.Auth.csproj" />
   </ItemGroup>
 
 </Project>
