--- a/WebApi/CompanyName.Application.WebApi.OrdersApi.csproj
+++ b/WebApi/CompanyName.Application.WebApi.OrdersApi.csproj
@@ -1,13 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -22,6 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CompanyName.Application.Core\CompanyName.Application.Core.csproj" />
+    <ProjectReference Include="..\CompanyName.Application.Services.AuthService\CompanyName.Application.Services.AuthService.csproj" />
     <ProjectReference Include="..\Database\CompanyName.Application.Dal.Orders.csproj" />
     <ProjectReference Include="..\Services\CompanyName.Application.Services.ProductService.csproj" />
   </ItemGroup>
