changed version of framework in core lib.

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "OrderRepositorySettings": {
     "ConnectionString": "newConnectionString",
-    "IsInMemory": "false",
+    "IsInMemory": "true",
     "DatabaseName": "MarketDb"
   },
   "AuthRepositorySettings": {
