--- a/WebApi/CompanyName.Application.WebApi.OrdersApi.csproj
+++ b/WebApi/CompanyName.Application.WebApi.OrdersApi.csproj
@@ -21,6 +21,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NLog" Version="5.1.3" />
+    <PackageReference Include="NLog.Web" Version="5.2.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
